Create sync jobs
